--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">StudentBeer</string>
     <string name="rating_question">Hur var ditt besök på</string>
     <string name="price_question">Vad kostade en storstark på</string>
+    <string name="arrived_at_destination">"Du är framme!"</string>
 </resources>
